--- a/css/main.css
+++ b/css/main.css
@@ -27,6 +27,8 @@ h1 {
     padding: 0;
 }
 
+
+
 li {
 
     list-style: none;
@@ -222,6 +224,10 @@ img {
     margin-top: 2em;
     margin: auto;
     color: var(--white);
+}
+
+.order_list__item {
+    list-style: decimal;
 }
 
 .list_tabor__item {
