--- a/css/main.css
+++ b/css/main.css
@@ -530,6 +530,7 @@ img {
     display: grid;
     gap: 1em;
     grid-template-columns: 1fr 1fr;
+    align-items: center;
 }
 
 .table__item--right {
