--- a/css/main.css
+++ b/css/main.css
@@ -59,6 +59,11 @@ img {
 
 }
 
+.header--letak {
+    background-image: url(../imgs/letak/Detsky\ den.png);
+    background-size: contain;
+    
+}
 
 
 
