--- a/css/main.css
+++ b/css/main.css
@@ -787,3 +787,28 @@ img {
 
 
 
+.year_box {
+    background-color: var(--dark-red);
+    width: 150px;
+    height: 50px;
+    border-radius: 5px;
+    color: var(--white);
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.year_box__text {
+    color: var(--white);
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    align-content: center;
+}
+
+
+.select_year {
+    display: flex;
+    gap: 1em;
+    flex-wrap: wrap;
+    margin: 1em;
+}
