--- a/css/main.css
+++ b/css/main.css
@@ -52,7 +52,7 @@ img {
 
 
 .header {
-    background-image: url(../imgs/Tynka_devron_S.jpg);
+    background-image: url(../akce_foto/titulka.png);
     background-position: 25% 5%;
     background-size: cover;
     height: 100vh;
