--- a/css/main.css
+++ b/css/main.css
@@ -54,7 +54,7 @@ img {
 .header {
     background-image: url(../akce_foto/titulka.png);
     background-position: 25% 5%;
-    background-size: cover;
+    background-size: contain;
     height: 100vh;
 
 }
