--- a/css/main.css
+++ b/css/main.css
@@ -60,7 +60,7 @@ img {
 }
 
 .header--letak {
-    background-image: url(../imgs/letak/Detsky\ den.png);
+    background-image: url(../imgs/letak/letak_tabor.jpg);
     background-size: contain;
     
 }
