--- a/css/main.css
+++ b/css/main.css
@@ -53,15 +53,15 @@ img {
 
 
 .header {
-    background-image: url(../imgs/Tynka_devron_S.jpg);
+    background-image: url(../akce_foto/titulka.png);
     background-position: 25% 5%;
-    background-size: cover;
+    background-size: contain;
     height: 100vh;
 
 }
 
 .header--letak {
-    background-image: url(../imgs/letak/Detsky\ den.png);
+    background-image: url(../imgs/letak/letak_tabor.jpg);
     background-size: contain;
     
 }
