--- a/css/765px.css
+++ b/css/765px.css
@@ -68,6 +68,12 @@
         max-width: 600px;
     }
 
+    .img_container--center {
+        display: block;
+        max-width: 400px;
+    }
+    
+
     .modal-content {
         margin: auto;
         display: block;
