--- a/css/main.css
+++ b/css/main.css
@@ -61,7 +61,7 @@ img {
 }
 
 .header--letak {
-    background-image: url(../imgs/letak/letak_tabor.jpg);
+    background-image: url(../akce_foto/Image.jpeg);
     background-size: contain;
     
 }
