--- a/css/main.css
+++ b/css/main.css
@@ -53,7 +53,7 @@ img {
 
 
 .header {
-    background-image: url(../akce_foto/titulka.png);
+    background-image: url(../akce_foto/titulka2.jpg);
     background-position: 25% 5%;
     background-size: contain;
     height: 100vh;
